Fixing middle name not showing bug and adding skeleton for paginaton

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -17,8 +17,10 @@ body {
 /* hover: #515151 */
 .postingCard {
   background-color: #222222;
-  border: 1px solid #ededed;
-  border-radius: 5px;
+  /* previously #ededed */
+  border: none;
+  border-radius: 12px;
+  box-shadow: 0 4px 12px rgba(0, 0, 0, 0.3);
   width: 600px;
   padding: 20px 25px;
   display: flex;
